<resources>
    <string name="app_name">FinalProject</string>
    <string name="title_message">Chat</string>
    <string name="title_card">Card</string>
    <string name="title_music">Music</string>
    <string name="title_watch">Watch</string>
    <string name="title_weather">Weather</string>
    <string name="time">00:00:00</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="restart">restart</string>
    <string name="score">Score:</string>
    <string name="reset">Reset</string>
    <string name="a">A*</string>
    <string name="position">占位符</string>
    <string name="prev">prev</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="next">next</string>
    <string name="textview">TextView</string>
    <string name="chat">Please input chat message!</string>
    <string name="send">Send</string>
    <string name="text">Hello!!!</string>
</resources>
