<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_card"
        android:icon="@drawable/ic_games_black_24dp"
        android:title="@string/title_card"/>

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_music_black_24dp"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_watch"
        android:icon="@drawable/ic_watch_black_24dp"
        android:title="@string/title_watch" />

    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/ic_weather_black_24dp"
        android:title="@string/title_weather" />

</menu>
