<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.finalproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_card"
        android:name="com.example.finalproject.ui.card.CardFragment"
        android:label="@string/title_card"
        tools:layout="@layout/fragment_card" />

    <fragment
        android:id="@+id/navigation_music"
        android:name="com.example.finalproject.ui.music.MusicFragment"
        android:label="@string/title_music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/navigation_watch"
        android:name="com.example.finalproject.ui.watch.WatchFragment"
        android:label="@string/title_watch"
        tools:layout="@layout/fragment_watch" />

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.example.finalproject.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />

</navigation>