<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.music.MusicFragment">

    <Button
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/prev"
        app:layout_constraintEnd_toEndOf="@+id/next"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/next"
        app:layout_constraintTop_toBottomOf="@+id/next"
        android:background="#00000000" />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#00000000"/>

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/pause"
        app:layout_constraintEnd_toEndOf="@+id/play"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/play"
        app:layout_constraintTop_toBottomOf="@+id/play"
        android:background="#00000000"/>

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/stop"
        app:layout_constraintEnd_toEndOf="@+id/pause"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/pause"
        app:layout_constraintTop_toBottomOf="@+id/pause"
        android:background="#00000000"/>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="@+id/stop"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/stop"
        app:layout_constraintTop_toBottomOf="@+id/stop"
        android:background="#00000000"/>

    <TextView
        android:id="@+id/textView_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/textview"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/prev"
        app:layout_constraintStart_toStartOf="@+id/prev"
        app:layout_constraintTop_toBottomOf="@+id/prev" />

    <TextView
        android:id="@+id/textView_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/textview"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView_count"
        app:layout_constraintStart_toStartOf="@+id/textView_count"
        app:layout_constraintTop_toBottomOf="@+id/textView_count" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="106dp"
        android:layout_marginBottom="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>